Added FontAwesome Brands stylesheet

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,6 +14,7 @@
   <link rel="stylesheet" href="{{ site.github.url }}/assets/css/main.css">
   <link rel="stylesheet" href="{{ site.github.url }}/assets/css/syntax.css">
   <link rel="stylesheet" href="{{ site.github.url }}/assets/css/fontawesome.all.min.css">
+  <link rel="stylesheet" href="{{ site.github.url }}/assets/css/brands.min.css">
 
   <!-- Use Atom -->
   {% feed_meta %}
