Added explicit favicon reference

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -15,7 +15,7 @@
   <link rel="stylesheet" href="{{ site.github.url }}/assets/css/syntax.css">
   <link rel="stylesheet" href="{{ site.github.url }}/assets/css/fontawesome.all.min.css">
   <link rel="stylesheet" href="{{ site.github.url }}/assets/css/brands.min.css">
-
+  <link rel="icon" href="{{ site.github.url }}/favicon.ico" type="image/x-icon">
   <!-- Use Atom -->
   {% feed_meta %}
   <!-- Use RSS-2.0 -->
