--- a/_includes/head.html
+++ b/_includes/head.html
@@ -26,7 +26,7 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Quattrocento+Sans">-->
   
   
-  <script type="text/javascript" async
+  <script type="text/javascript" id="MathJax-script" async
     src="{{ site.github.url }}/assets/mathjax/tex-chtml.js">
     MathJax.Hub.Config({
         tex2jax: {
