Test commit to repair font awesome self-hosting

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -438,7 +438,7 @@ th, td {
   padding-right: 10px;
 }
 
-.fa { font-family: 'FontAwesome' !important; }
+/*.fa { font-family: 'FontAwesome' !important; }*/
 
 .fa-envelope {
   padding: 5px;
